# gradu

./: .gitignore  corrections.ispell
bencher/: .gitignore  LICENSE  license.txt  mktmp.sh  parse.py  parse2.py  parse3.py
bencher/libs/binarytrees_rust/: Cargo.toml  libcrossbeam_deque.rlib  librayon.rlib  libtoolshed.rlib  libtyped_arena.rlib
bencher/libs/binarytrees_rust/src/: main.rs
bencher/libs/knucleotide_rust/: Cargo.toml  libfnv.rlib  libfutures.rlib  libfutures_cpupool.rlib  libhashbrown.rlib  libindexmap.rlib  libitertools.rlib  libnum.rlib  libtokio_threadpool.rlib
gradu/: Makefile  abstract.tex  c-taustaa.tex  data.tex  dokumentaatio.tex  gradu.sty  gradu.tex  johdanto.tex  liite.tex  maaritelmat.tex  muut.tex  oma.tex  plaintext.tex  purkka.tex  references.bib  tktltiki.cls  tulokset.tex  uusi.tex  yhteenveto.tex
maarittely/: definition.sty  definition.tex  gradu.sty  johdanto.tex  maarittely.sty  maarittely.tex  references.bib
suunnitelma/: Makefile  Makefile.kieli  c-error-handling-maybe.kt  c-error-handling.c  c-hygiene-output.txt  c-hygiene.c  c-overflow-output  c-overflow-output.txt  c-overflow.c  curly-statement.bnf  curly.bnf  curly.tex  defer-output.txt  example.kieli  github.tex  goreflect.go  grammar_notation.py  guards.rs  hello.curly  hello.lisp  johdanto.tex  kieli-base.bnf  kieli-body.bnf  kieli-data.bnf  kieli-imports.bnf  kieli-macros.bnf  kieli-types.bnf  kieli.bnf  kieli.tex  kieli_lexer.py  liite.tex  lisp-base.bnf  lisp.tex  luettelo.tex  maaritelmat.tex  monad.kieli  muut.tex  oma.tex  openssl_md5.c  rakenne.tex  (+18 more)
(+128 files in other folders)
