[package]
name = "binarytrees_rust"
version = "0.1.0"
authors = ["Jaakko Hannikainen <jaakko.hannikainen@solita.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typed-arena = "1.6.1"
rayon = "1.2.0"
crossbeam-deque = "0.7.1"
toolshed = "0.8.1"
