[package]
name = "knucleotide_rust"
version = "0.1.0"
authors = ["Jaakko Hannikainen <jgke@jgke.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1.29"
hashbrown = "0.6.0"
tokio-threadpool = "0.1.15"
itertools = "0.8.0"
num = "0.2.0"
indexmap = "1.2.0"
futures-cpupool = "0.1.8"
fnv = "1.0.6"
